# OpenRobotGPT

./: .gitignore  Dockerfile  README.md  launch.sh  launch2.sh  requirements.txt  setup.sh  structure.txt
workspace/: GymNode.py  README.txt  StateReward.msg  setup.sh  test.py
workspace/contexts/: correction_context.json  correction_context.txt  decision_context.json  decision_context.txt  decison_context.json  evaluation_context.json  evaluation_context.txt
workspace/dataset/2024-05-28_13-43-43/: prompt.txt
workspace/dataset/2024-05-28_13-45-47/: prompt.txt
workspace/dataset/2024-05-28_13-46-32/: prompt.txt
workspace/dataset/2024-05-28_13-52-13/: prompt.txt
workspace/dataset/2024-05-28_13-53-57/: prompt.txt
workspace/dataset/2024-05-28_14-04-51/: prompt.txt
workspace/dataset/2024-05-28_14-06-27/: prompt.txt
workspace/dataset/2024-05-28_14-13-03/: prompt.txt
workspace/dataset/2024-05-28_14-20-33/: prompt.txt
workspace/dataset/2024-05-28_14-24-46/: prompt.txt
workspace/dataset/2024-05-28_14-26-46/: prompt.txt
workspace/dataset/2024-05-28_14-28-01/: prompt.txt
workspace/dataset/2024-05-28_15-12-48/: prompt.txt
workspace/dataset/2024-05-28_15-48-06/: prompt.txt
workspace/dataset/2024-05-28_16-18-55/: prompt.txt
workspace/dataset/2024-05-29_11-18-21/: prompt.txt
workspace/dataset/2024-05-29_13-10-55/: prompt.txt
workspace/dataset/2024-05-29_13-12-17/: prompt.txt
workspace/dataset/2024-05-29_13-14-28/: prompt.txt
workspace/dataset/2024-05-29_13-31-45/: prompt.txt
workspace/dataset/2024-05-29_13-45-53/: prompt.txt
workspace/dataset/2024-05-29_13-53-46/: prompt.txt
workspace/dataset/2024-05-29_14-07-59/: prompt.txt
workspace/dataset/2024-05-29_14-09-37/: prompt.txt
workspace/gym_prova/: setup.py
workspace/ros2_ws/: bin_packing.yaml  bottle_arrangement.yaml  cube_stacking.yaml  house_building_1.yaml  house_building_2.yaml  house_building_3.yaml  move_cube.yaml  pyramid_stacking.yaml  stacking.yaml
workspace/ros2_ws/install/panda_env/share/panda_env/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/ros2_ws/install/panda_env/share/panda_env/cmake/: panda_envConfig.cmake
workspace/ros2_ws/src/code_bot/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/code_bot/code_bot/: BotNode.py  bot_node.py  code_node.py  evaluation_bot.py  perception_test_node.py  test_node.py
workspace/ros2_ws/src/code_bot/code_bot/bots/: Bot.py  ChatGPT.py  DecisionBot.py
workspace/ros2_ws/src/code_bot/code_bot/config/: config_bot.json
workspace/ros2_ws/src/code_bot/config/: config_bot.json
workspace/ros2_ws/src/code_bot/launch/: demo.launch.py  demo2.launch.py  pipeline_launch.py
workspace/ros2_ws/src/hello_moveit/: CMakeLists.txt  package.xml
workspace/ros2_ws/src/hello_moveit/src/: hello_moveit.cpp
(+334 files in other folders)
